Add summary statistics example

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -429,6 +429,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "f4f184cd-daac-485f-8b9b-5b91297687e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data[\"Q/P\"] = data[\"Q\"] / data[\"P\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2605235b-9d73-4e60-add2-032fd90139dc",
+   "metadata": {},
+   "source": [
+    "# Plots"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "id": "b41e4dd6-ba16-4719-b5ec-7153cbee614c",
    "metadata": {},
@@ -514,16 +532,53 @@
     }
    ],
    "source": [
-    "data[\"Q/P\"] = data[\"Q\"] / data[\"P\"]\n",
     "sns.lineplot(data, x=\"Q/P\", y=\"GFLOPS\", hue='Cluster')\n",
     "plt.title('Performance vs Q/P Ratio')\n",
     "plt.savefig('figures/flops_q_p.svg')"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b0c957cb-4714-4345-97c2-323a199278e5",
+   "metadata": {},
+   "source": [
+    "# Statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "589b2336-2fc5-440c-a8f3-ebb71cb98b6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    2784.000000\n",
+       "mean      278.055839\n",
+       "std       393.255700\n",
+       "min         9.360800\n",
+       "25%        76.586750\n",
+       "50%       160.260000\n",
+       "75%       310.285000\n",
+       "max      2996.200000\n",
+       "Name: GFLOPS, dtype: float64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Summary Stats for performance of ALL runs\n",
+    "data[\"GFLOPS\"].describe()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b716de41-9ab0-490c-a274-c27b6f71d812",
+   "id": "2dd4a9d0-f598-47a5-aee2-9478af437b5c",
    "metadata": {},
    "outputs": [],
    "source": []
