Expand stats a little

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -577,8 +577,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "2dd4a9d0-f598-47a5-aee2-9478af437b5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    1281.000000\n",
+       "mean      170.073240\n",
+       "std       120.966211\n",
+       "min        30.787000\n",
+       "25%        83.445000\n",
+       "50%       132.930000\n",
+       "75%       208.660000\n",
+       "max       883.640000\n",
+       "Name: GFLOPS, dtype: float64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Summary stats for Hopper\n",
+    "data[data['Cluster'] == 'Hopper'][\"GFLOPS\"].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "90ee146f-e097-419a-a6bf-2ba3316c55cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    1503.000000\n",
+       "mean      370.088912\n",
+       "std       505.623340\n",
+       "min         9.360800\n",
+       "25%        71.046000\n",
+       "50%       217.350000\n",
+       "75%       439.775000\n",
+       "max      2996.200000\n",
+       "Name: GFLOPS, dtype: float64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Summary stats for Wheeler\n",
+    "data[data['Cluster'] == 'Wheeler'][\"GFLOPS\"].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "681df997-3c9e-4aa6-92bb-94bbd7ec3bba",
    "metadata": {},
    "outputs": [],
    "source": []
