Label peaks in figures

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -9,6 +9,7 @@
    "source": [
     "import pandas as pd\n",
     "import seaborn as sns\n",
+    "import scipy\n",
     "from matplotlib import pyplot as plt"
    ]
   },
@@ -86,6 +87,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "56ddbcd6-621f-4a76-9bc8-23bd3fd75e44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def label_peaks(df, groupby, value):\n",
+    "    mean = df.groupby(groupby).mean(numeric_only=True)[value]\n",
+    "    idx, _ = scipy.signal.find_peaks(mean)\n",
+    "    peaks = mean.iloc[idx]\n",
+    "\n",
+    "    for (x, y) in peaks.items():\n",
+    "        plt.text(x, y, str(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b41e4dd6-ba16-4719-b5ec-7153cbee614c",
    "metadata": {},
    "outputs": [],
@@ -103,6 +120,7 @@
    "outputs": [],
    "source": [
     "sns.lineplot(data, x=\"N\", y=\"GFLOPS\", hue='Cluster')\n",
+    "label_peaks(data[data['Cluster'] == 'Hopper'], \"N\", \"GFLOPS\")\n",
     "plt.title('Performance vs Problem Size')\n",
     "plt.savefig('figures/flops_problem_size.svg')"
    ]
@@ -115,6 +133,8 @@
    "outputs": [],
    "source": [
     "sns.lineplot(data, x=\"BLOCK_SIZE\", y=\"GFLOPS\", hue='Cluster')\n",
+    "label_peaks(data[data['Cluster'] == 'Hopper'], \"BLOCK_SIZE\", \"GFLOPS\")\n",
+    "label_peaks(data[data['Cluster'] == 'Wheeler'], \"BLOCK_SIZE\", \"GFLOPS\")\n",
     "plt.title('Performance vs Block Size')\n",
     "plt.savefig('figures/flops_block_size.svg')"
    ]
@@ -127,6 +147,8 @@
    "outputs": [],
    "source": [
     "sns.lineplot(data, x=\"Q/P\", y=\"GFLOPS\", hue='Cluster')\n",
+    "label_peaks(data[data['Cluster'] == 'Wheeler'], \"Q/P\", \"GFLOPS\")\n",
+    "plt.xscale('log')\n",
     "plt.title('Performance vs Q/P Ratio')\n",
     "plt.savefig('figures/flops_q_p.svg')"
    ]
