--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -10,7 +10,8 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import scipy\n",
-    "from matplotlib import pyplot as plt"
+    "from matplotlib import pyplot as plt\n",
+    "import matplotlib.patheffects as pe"
    ]
   },
   {
@@ -91,13 +92,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def label_peaks(df, groupby, value):\n",
+    "def label_peaks(df, groupby, value, troughs=False):\n",
     "    mean = df.groupby(groupby).mean(numeric_only=True)[value]\n",
     "    idx, _ = scipy.signal.find_peaks(mean)\n",
     "    peaks = mean.iloc[idx]\n",
     "\n",
+    "    if troughs:\n",
+    "        idx, _ = scipy.signal.find_peaks(-mean)\n",
+    "        peaks = pd.concat((peaks, mean.iloc[idx]))\n",
+    "\n",
     "    for (x, y) in peaks.items():\n",
-    "        plt.text(x, y, str(x))"
+    "        plt.text(x, y, str(x), path_effects=[pe.withStroke(linewidth=4, foreground=\"white\")])"
    ]
   },
   {
@@ -120,7 +125,7 @@
    "outputs": [],
    "source": [
     "sns.lineplot(data, x=\"N\", y=\"GFLOPS\", hue='Cluster')\n",
-    "label_peaks(data[data['Cluster'] == 'Hopper'], \"N\", \"GFLOPS\")\n",
+    "label_peaks(data[data['Cluster'] == 'Hopper'], \"N\", \"GFLOPS\", True)\n",
     "plt.title('Performance vs Problem Size')\n",
     "plt.savefig('figures/flops_problem_size.svg')"
    ]
@@ -133,8 +138,8 @@
    "outputs": [],
    "source": [
     "sns.lineplot(data, x=\"BLOCK_SIZE\", y=\"GFLOPS\", hue='Cluster')\n",
-    "label_peaks(data[data['Cluster'] == 'Hopper'], \"BLOCK_SIZE\", \"GFLOPS\")\n",
-    "label_peaks(data[data['Cluster'] == 'Wheeler'], \"BLOCK_SIZE\", \"GFLOPS\")\n",
+    "label_peaks(data[data['Cluster'] == 'Hopper'], \"BLOCK_SIZE\", \"GFLOPS\", True)\n",
+    "label_peaks(data[data['Cluster'] == 'Wheeler'], \"BLOCK_SIZE\", \"GFLOPS\", True)\n",
     "plt.title('Performance vs Block Size')\n",
     "plt.savefig('figures/flops_block_size.svg')"
    ]
@@ -147,7 +152,7 @@
    "outputs": [],
    "source": [
     "sns.lineplot(data, x=\"Q/P\", y=\"GFLOPS\", hue='Cluster')\n",
-    "label_peaks(data[data['Cluster'] == 'Wheeler'], \"Q/P\", \"GFLOPS\")\n",
+    "label_peaks(data[data['Cluster'] == 'Wheeler'], \"Q/P\", \"GFLOPS\", False)\n",
     "plt.xscale('log')\n",
     "plt.title('Performance vs Q/P Ratio')\n",
     "plt.savefig('figures/flops_q_p.svg')"
